<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:id="@+id/menu_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/gps"
            android:icon="@drawable/house"
            android:title="@string/add_gps" />
    </group>

    <group android:id="@+id/menu_mid"
        android:checkableBehavior="none">

        <item
            android:id="@+id/teachers"
            android:icon="@drawable/baseline_people_black_18"
            android:title="@string/teachers" />

        <item
            android:id="@+id/homework"
            android:icon="@drawable/baseline_book_black_18"
            android:title="@string/homeworks" />
        <item
            android:id="@+id/notes"
            android:icon="@drawable/baseline_event_note_black_18"
            android:title="@string/notes" />
    </group>

    <group android:id="@+id/menu_down"
        android:checkableBehavior="none">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/baseline_settings_black_18"
            android:title="설정" />
    </group>

</menu>
